lect-41 main.ts

--- a/angular-essentials/src/lect-41/app/user/user.component.html
+++ b/angular-essentials/src/lect-41/app/user/user.component.html
@@ -2,8 +2,8 @@
   <button (click)="onSelectUser()">
     <img
       [src]="imagePath"
-      [alt]="name"
+      [alt]="user.name"
     />
-    <p>{{ name }}</p>
+    <p>{{ user.name }}</p>
   </button>
 </div>
