--- a/router/src/lect-284/app/tasks/tasks.component.html
+++ b/router/src/lect-284/app/tasks/tasks.component.html
@@ -1,9 +1,9 @@
 <p>
   <a
     routerLink="./"
-    [queryParams]="{ order: order === 'asc' ? 'desc' : 'asc' }"
+    [queryParams]="{ order: order() === 'asc' ? 'desc' : 'asc' }"
   >
-    Sort {{ order === 'asc' ? 'Ascending': 'Descending'}}
+    Sort {{ order() === 'asc' ? 'Ascending': 'Descending'}}
   </a>
 </p>
 <ul>
